# Formation

./: Message_Linkedln.odt  formation.git.sln  notes.md
ANGULAR/MonProjet/: README.md  angular.json  package-lock.json  package.json
ANGULAR/MonProjet/src/app/: app.component.css  app.component.html  app.component.ts
AURELIA/: README.md  index.ejs  package-lock.json  package.json  webpack.config.js
AURELIA/aurelia_project/: aurelia.json
AURELIA/src/: app.html  app.js  todo.js
BOOTSRAP/: index.html  note.txt
CPP/Echecs/: CMakeLists.txt  Doxyfile  Echiquier.cxx  Echiquier.d  Echiquier.gcda  Echiquier.gcno  Echiquier.h  Joueur.cxx  Joueur.d  Joueur.gcno  Joueur.h  Makefile  Piece.cxx  Piece.gcda  Piece.gcno  Piece.h  PieceGtest.h  sonar-project.properties  testGtest.cxx  testPiece.cxx  testPiece.gcda  testPiece.gcno
CPP/Echecs/.devcontainer/: Dockerfile  devcontainer.json
CQRS/: notes.md
CQRS/Exercice/: commands.md  notes.md
CQRS/Exercice/CQRS-ES/CQRS.Core/: CQRS.Core.csproj
CQRS/Exercice/SM-Post/: SM-Post.sln
CQRS/Projet/: notes.md
CQRS/Projet/SM-Post/: SM-Post.sln
CSHARP/CRUD/: CRUD.sln
CSHARP/CRUD/CRUD/Properties/: launchSettings.json
CSHARP/Cours2/Exercice/: Exercice.sln
CSHARP/premier_programme/premier_programme/: premier_programme.sln
CSHARP/test/: test.sln
JAVA/: App.java  Heritage.java  MainApp.java  Scanner_BufferReader.java  StringBuilder_StringBuffer.java  Tableau.java  Try_Catch.java  Utiisation_Import.java
JAVA/Fait/: .gitignore  Cat.java  File.java  HashSet_HashMap.java  Heritage.java  Interface.java  List.java  Polymorphisme.java  Scanner_BufferReader.java  StringBuilder_StringBuffer.java  Tableau.java  Try_Catch.java  Utiisation_Import.java
JAVA/game/: .gitignore  Building.java  Cottage.java  Flayable.java  Flyable.java  Glider.java  Ship.java  Vehicule.java
JAVA/mypackage/: .gitignore  Cat.java  Day.java  Exercice.java  Horse.java  Item.java  List.java  LivinSpecies.java  MyTimer.java  Pegasus.java  Player.java  Tiger.java
KOTLIN/gradle/wrapper/: gradle-wrapper.properties
PHP/: exo.php  index.php
PHP/POO/Exercice1/: index.php
PYTHON/Python_tkinter/: copy_grille.py  grille.py  main.py
VB/Exercice_algo/: Exercice_algo.sln
VB/Exercice_algo/Exercice_algo/: Exercice_algo.vbproj  Program.vb
mon-premier-projet/: README.md  angular.json  package-lock.json  package.json
react/my-app/src/: App.js
responsive-web-design/: index.html
responsive-web-design/src/: style.css
(+41 files in other folders)
